# image-validator-ng

./: .gitignore  pyproject.toml
.github/workflows/: PyPi.yml  TestPyPi.yml
iiif_validator/: validate.py
iiif_validator/tests/: format_pdf.py  http_caching.py  http_cors.py  id_error_unescaped.py  id_escaped.py  size_up.py  test.py
